--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Thien Hoang"
+author: "Hoang Dang Thien"
+description: "This is the place where I summarize what I learn about AI" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "example@mail.com"
 twitter_username: "twitteruser"
-github_username: "githubuser"
+github_username: "thienkaka2312"
 linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
