--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Thien Hoang"
 author: "Hoang Dang Thien"
-description: "This is the place where I summarize what I learn about AI" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+#description: "This is the place where I summarize what I learn about AI" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
